# tradestation-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  labels.yml
.github/workflows/: label-manager.yml  pre-commit.yml
examples/: .env  account.rs  auth.rs  execution.rs  initial_auth.rs  market_data.rs  mocking.rs  token_auth.rs
src/: account.rs  client.rs  error.rs  execution.rs  lib.rs  market_data.rs  token.rs
src/accounting/: accounts.rs  balances.rs  mod.rs  orders.rs  positions.rs
src/execution/: confirm.rs  mod.rs  order.rs  orders.rs  request.rs  route.rs  ticket.rs  trigger.rs  update.rs
src/market_data/: bar.rs  market_depth.rs  mod.rs  options.rs  quote.rs  symbol.rs
src/responses/: account.rs  execution.rs  market_data.rs  mod.rs  stream.rs
tests/: mock_accounting.rs  mock_execution.rs  mock_market_data.rs
