[package]
name = "tradestation"
version = "0.0.4"
authors = ["Antonio Hickey <contact@antoniohickey.com>"]
description = "An ergonomic Rust client for the TradeStation API."
documentation = "https://docs.rs/tradestation/latest/tradestation/index.html"
homepage = "https://crates.io/crates/tradestation"
repository = "https://github.com/antonio-hickey/tradestation-rs"
readme = "README.md"
keywords = ["tradestation", "finance", "quant", "trading"]
license = "MIT"
exclude = ["/.github/"]
include = ["README.md", "src/**/*", "examples/**/*"]
edition = "2021"

[lib]
name = "tradestation"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
