[package]
name = "tradestation"
version = "0.0.8"
authors = ["Antonio Hickey <contact@antoniohickey.com>"]
description = "An ergonomic Rust client for the TradeStation API."
documentation = "https://docs.rs/tradestation/latest/tradestation/index.html"
homepage = "https://crates.io/crates/tradestation"
repository = "https://github.com/antonio-hickey/tradestation-rs"
readme = "README.md"
keywords = ["tradestation", "finance", "quant", "trading"]
license = "MIT"
exclude = [".github", ".env", ".env.*", "**/.env", "**/.env.*"]
include = ["README.md", "src/**/*", "examples/**/*"]
edition = "2021"

[lib]
name = "tradestation"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
url = "2.5.7"

[dev-dependencies]
mockito = "1.2"
